# py_app_release_demo

./: README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
