[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject10"
version = "0.1.0"
description = "Example package"
authors = [{name = "Priyansu Dhal", email = "your-email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
